修改换货申请

--- a/EmpInfo/Views/Admin/Department.cshtml
+++ b/EmpInfo/Views/Admin/Department.cshtml
@@ -496,7 +496,7 @@
                     </span>
                     <input type="checkbox" id="depAuditNode" />
                 </div>
-                <div class="panel panel-default" id="depAuditPanel" style="min-height:300px;">
+                <div class="panel panel-default" id="depAuditPanel" style="height:300px;overflow:auto;">
                     <div class="panel-body">
                         <div class="b-div">
                             <span class="b-label">
