--- a/EmpInfo/Views/Apply/BeginApplyTI.cshtml
+++ b/EmpInfo/Views/Apply/BeginApplyTI.cshtml
@@ -197,7 +197,19 @@
                                 <option value="19:30 ~ 00:00">19:30 ~ 00:00</option>
                             </select>
                         </div>
-                    </div>                       
+                    </div>
+                    <div class="b-div">
+                        <span class="b-label">
+                            客户自提:
+                        </span>
+                        <div class="b-input">
+                            <select class="form-control" name="is_fetch_by_self" id="is_fetch_by_self" required>
+                                <option value="">---- 下拉选择 ----</option>                                
+                                <option value="false">否</option>
+                                <option value="true">是</option>
+                            </select>
+                        </div>
+                    </div>
                     <div class="b-div">
                         <span class="b-label">
                             备注:
