--- a/EmpInfo/Views/Apply/BeginAuditDPApply.cshtml
+++ b/EmpInfo/Views/Apply/BeginAuditDPApply.cshtml
@@ -35,6 +35,9 @@
     <script src="@Url.Content("~/Scripts/bootstrap-datetimepicker.min.js")"></script>
     <script src="@Url.Content("~/Scripts/bootstrap-datetimepicker.zh-CN.js")"></script>
     <script src="@Url.Content("~/Scripts/star-rating.min.js")"></script>
+    <script src="@Url.Content("~/Scripts/webuploader.min.js")"></script>
+    <script src="@Url.Content("~/Scripts/myUploaderPro.js?v=2")"></script>
+    <script src="@Url.Content("~/Scripts/myDownloaderPro.js")"></script>
     <script>
     $(function () {
         $("#accepterTimePicker").datetimepicker({
@@ -65,6 +68,22 @@
                 5: '5分(非常满意)'
             }
         });
+
+        $("#myUploader").myUploader({
+            accept: {
+                title: 'Images',
+                extensions: 'gif,jpg,jpeg,bmp,png',
+                mimeTypes: 'image/*'
+            },
+            sysNum: "@form.sys_no",
+            fileNumLimit: 3,
+            prefix: "2^" //申请人的前缀
+        });
+
+        $("#attList1").myDownloader({ sysNum: "@form.sys_no", prefix: "1^" });
+        if ($("#attList2")) {
+            $("#attList2").myDownloader({ sysNum: "@form.sys_no", prefix: "2^" });
+        }
     });
     function secondAudit(isPass) {
         openConfirmDialog("确认要 " + (isPass ? "同意" : "不同意") + " 此维修申请吗？", function () {
@@ -331,6 +350,10 @@
                         <span>@form.repair_content</span>
                     </div>
                 </div>
+                <div style="margin-top:6px;">
+                    <div class="b-label">故障图片:</div>
+                    <div id="attList1"></div>
+                </div>
             </div>
 
         </div>
@@ -438,18 +461,6 @@
                                 </span>
                                 <span>@form.accepter_name</span>
                             </div>
-                            @*<div class="col-xs-12 col-md-4 col-sm-6">
-                                <span class="b-label">
-                                    手机号码:
-                                </span>
-                                <span>@form.accepter_phone</span>
-                            </div>
-                            <div class="col-xs-12 col-md-4 col-sm-6">
-                                <span class="b-label">
-                                    手机短号:
-                                </span>
-                                <span>@form.accepter_short_phone</span>
-                            </div>*@
                             <div class="col-xs-12 col-md-8 col-sm-12">
                                 <span class="b-label">
                                     维修意见:
@@ -485,19 +496,6 @@
                                 <input type="text" class="form-control" id="accepter" value="@bam.auditorName" />
                             </span>
                         </div>
-                        @*<div class="b-div">
-                            <span class="b-label">手机号码</span>
-                            <span style="display:inline-block;width:70%;">
-                                <input type="text" class="form-control" id="accepterPhone" value="@currentUser.phone" />
-                            </span>
-                        </div>
-                        <div class="b-div">
-                            <span class="b-label">手机短号</span>
-                            <span style="display:inline-block;width:70%;">
-                                <input type="text" class="form-control" id="accepterShortPhone" value="@currentUser.shortPhone" />
-                            </span>
-                        </div>*@
-
                         <div class="btn-group btn-group-justified" role="group" aria-label="操作按钮" style="margin:12px 0;">
                             <div class="btn-group" role="group">
                                 <button class="btn btn-success" onclick="thirdAudit(true)">
@@ -572,6 +570,10 @@
                                 <span>@form.charge_fee 元</span>
                             </div>
                         </div>
+                        <div style="margin-top:6px;">
+                            <div class="b-label">修复图片:</div>
+                            <div id="attList2"></div>
+                        </div>
                     }
                     @if (bam.isPass == null && bam.stepName.Contains("完成")) {
                         <i>请填写以下信息并确认完成此维修申请:</i>
@@ -602,7 +604,12 @@
                             </span>
                             <p class="small text-danger"><i class="fa fa-info-circle"></i> 费用保留一位小数点，免费维修请输入0</p>
                         </div>
-
+                        <div style="display:inline-block;">
+                            <div id="picker"> <i class="fa fa-upload"></i> 上传修复图片 </div>
+                        </div>
+                        <div id="myUploader">
+                            
+                        </div>
                         <div class="b-div">
                             <button class="btn btn-primary btn-block" onclick="fourthAudit(true)">确认完成</button>
                         </div>
