--- a/EmpInfo/Views/Apply/BeginAuditHHApply.cshtml
+++ b/EmpInfo/Views/Apply/BeginAuditHHApply.cshtml
@@ -10,11 +10,13 @@
     var rs = m.rs;
     var entryJson = JsonConvert.SerializeObject(es, setting);
     var returnJson = JsonConvert.SerializeObject(rs, setting);
+    var moduels = es.Select(e => e.moduel);
+    moduels = moduels.Union(es.Where(e => !string.IsNullOrWhiteSpace(e.c_moduel)).Select(e => e.c_moduel));
+    moduels = moduels.Distinct();
 }
 @section CSS{
     <link rel="stylesheet" href="@Url.Content("~/Content/bootstrap-datetimepicker.min.css")" />
     <link rel="stylesheet" href="@Url.Content("~/Content/bootstrap-table/bootstrap-table.min.css")" />
-    <link rel="stylesheet" href="@Url.Content("~/Content/webupload/webuploader.css")" />
 
     <style type="text/css">
         .b-label {
@@ -39,6 +41,7 @@
     <script src="@Url.Content("~/Scripts/bootstrap-datetimepicker.zh-CN.js")"></script>
     <script src="@Url.Content("~/Content/bootstrap-table/bootstrap-table.js")"></script>
     <script src="@Url.Content("~/Content/bootstrap-table/locale/bootstrap-table-zh-CN.min.js")"></script>
+    <script src="@Url.Content("~/Scripts/myDownloaderPro.js")"></script>
 
     <script>
         $("#tb").bootstrapTable({
@@ -52,24 +55,39 @@
                 {
                     radio: true
                 },
+                //{
+                //    field: "order_no",
+                //    title: "订单号",
+                //    footerFormatter:function(){
+                //        return "汇总:";
+                //    }
+                //}, 
                 {
-                    field: "order_no",
-                    title: "订单号"
-                }, {
                     field: "moduel",
                     title: "规格型号"
+                }, {
+                    field: "c_moduel",
+                    title: "子型号"
                 }, {
                     field: "return_qty",
                     title: "退货数量"
                 }, {
-                    field: "real_return_qty",
-                    title: "实退数量"
+                    field: "fill_qty",
+                    title: "补货数量"
                 }, {
+                    field: "other_qty",
+                    title: "其它数量"
+                }, 
+                //{
+                //    field: "real_return_qty",
+                //    title: "实退数量"
+                //}, 
+                {
                     field: "is_on_line",
                     title: "是否已上线"
                 }, {
-                    field: "fill_qty",
-                    title: "补货数量"
+                    field: "real_fill_qty",
+                    title: "实补数量"
                 }, {
                     field: "send_qty",
                     title: "实发数量"
@@ -87,16 +105,26 @@
             clickToSelect: true,
             idField: "id",
             uniqueId: "id",
+            showFooter: true,
+            footerStyle:function(){
+                return {
+                    css: { 'font-weight': 'bold' }
+                }
+            },
             columns: [
                 {
                     radio: true
                 },
                 {
                     field: "moduel",
-                    title: "规格型号"
+                    title: "规格型号",
+                    footerFormatter:function(){
+                        return "汇总:";
+                    }
                 }, {
                     field: "return_qty",
-                    title: "退货数量"
+                    title: "退货数量",
+                    footerFormatter:qtySum
                 }, {
                     field: "return_time",
                     title: "到货时间",
@@ -109,6 +137,11 @@
                 }
             ]
         });
+
+        function qtySum(data){
+            var field = this.field;
+            return data.map(function(d){return d[field]}).reduce(function(sum,i){return sum+i},0);
+        }
 
     </script>
     <script>
@@ -123,94 +156,64 @@
         });
     </script>
     <script>
-        var whoIsSaving = "";
-        $(function(){
-            $(".editBt").on("click",function(){
-                var rows = $('#tb').bootstrapTable('getSelections');
-                if (rows.length == 0) {
-                    toastr.error("请先选择一行后再修改");
-                    return;
-                }
-                var row = rows[0];
-                whoIsSaving = $(this).attr("data-role");
-                utils.loadObjData($("#itemFm"), row);
-                $("#itemModal .modal-title").html(whoIsSaving+"录入信息");
-                $("#itemModal").modal("show");
-            });
-
-            $("#saveBt").on("click",function(){
-                var validateMsg=utils.validateRequiredField($("#itemFm"));
-                if(!validateMsg.suc){
-                    toastr.error(validateMsg.msg);
-                    return;
-                }
-                var obj=utils.getFormObj($("#itemFm"));
-                console.log(obj);
-
-                $.post("../ApplyExtra/UpdateHHEntry",{whoIsSaving:whoIsSaving,obj:JSON.stringify(obj)},function(data){
-                    if(!data.suc){
-                        toastr.error(data.msg);
-                        return;
-                    }
-                    toastr.success("保存成功");
-                    if(whoIsSaving == "品质经理"){
-                        $('#tb').bootstrapTable('updateByUniqueId',{
-                            id:obj.id,
-                            row:{real_return_qty:obj.real_return_qty,is_on_line:obj.is_on_line}
-                        });
-                    }else if(whoIsSaving == "生产主管"){
-                        $('#tb').bootstrapTable('updateByUniqueId',{
-                            id:obj.id,
-                            row:{fill_qty:obj.fill_qty}
-                        });
-                    }else if(whoIsSaving == "物流"){
-                        $('#tb').bootstrapTable('updateByUniqueId',{
-                            id:obj.id,
-                            row:{send_qty:obj.send_qty,sender_name:obj.sender_name}
-                        });
-                    }
-
-                    $("#itemModal").modal("hide");
-                });
-            });
-
-            $("#printBt").on("click",function(){
-                window.open("../Report/PrintHH?sysNo=@h.sys_no");
-            });
-
-            if ($("#attList")) {
-                $.post("../Item/GetAttachments", { sysNo: "@h.sys_no" }, function (data) {
-                    if (data.length > 0) {
-                        for (var i = 0; i < data.length; i++) {
-                            var shortName = data[i].fileName;
-                            if (shortName.length > 25) {
-                                var ext = shortName.substr(shortName.lastIndexOf("."));
-                                shortName = shortName.substr(0, 20) + ".." + ext;
-                            }
-                            $(attList).append('<li class="list-group-item">\
-                                    <a href="#" data-fd="' + data[i].fileName + '"><i class="fa fa-download"></i> ' + shortName + '('+(data[i].fileSize > 1000000 ? ((data[i].fileSize / 1000000).toFixed(1) + 'M') : ((data[i].fileSize / 1000).toFixed(1) + 'K')) + ')</a>\
-                                    </li>');
-                        }
-                    }
-                });
+    var whoIsSaving = "";
+    $(function(){
+        $(".editBt").on("click",function(){
+            var rows = $('#tb').bootstrapTable('getSelections');
+            if (rows.length == 0) {
+                toastr.error("请先选择一行后再修改");
+                return;
             }
+            var row = rows[0];
+            whoIsSaving = $(this).attr("data-role");
+            utils.loadObjData($("#itemFm"), row);
+            $("#itemModal .modal-title").html(whoIsSaving+"录入信息");
+            $("#itemModal").modal("show");
+        });
 
-            $("#attList").on("click", "a", function () {
-                var fileName = $(this).attr("data-fd");
-                var url = utils.GetDownloadRoute("@h.sys_no") + fileName;
-                window.open(url);
+        $("#saveBt").on("click",function(){
+            var validateMsg=utils.validateRequiredField($("#itemFm"));
+            if(!validateMsg.suc){
+                toastr.error(validateMsg.msg);
+                return;
+            }
+            var obj=utils.getFormObj($("#itemFm"));
+            console.log(obj);
+
+            $.post("../ApplyExtra/UpdateHHEntry",{whoIsSaving:whoIsSaving,obj:JSON.stringify(obj)},function(data){
+                if(!data.suc){
+                    toastr.error(data.msg);
+                    return;
+                }
+                toastr.success("保存成功");
+                if(whoIsSaving == "生产主管"){
+                    $('#tb').bootstrapTable('updateByUniqueId',{
+                        id:obj.id,
+                        row:{real_fill_qty:obj.real_fill_qty}
+                    });
+                }else if(whoIsSaving == "物流"){
+                    $('#tb').bootstrapTable('updateByUniqueId',{
+                        id:obj.id,
+                        row:{send_qty:obj.send_qty,sender_name:obj.sender_name}
+                    });
+                }
+
+                $("#itemModal").modal("hide");
             });
+        });
 
-        })
+        $("#printBt").on("click",function(){
+            window.open("../Report/PrintHH?sysNo=@h.sys_no");
+        });
+
+        if ($("#attList")) {
+            $("#attList").myDownloader({sysNum:"@h.sys_no"});
+        }
+
+    })
     </script>
     <script>
-        function audit(isPass) {
-            if(isPass && "@bam.stepName".indexOf("品质经理")>=0){
-                if(parseInt($("#myUploader").getMyUploaderFilesNum()) < 1){
-                    toastr.error("请上传复检报告复检再确认");
-                    return;
-                }
-            }
+        function audit(isPass) {            
             openConfirmDialog("确认要" + (isPass ? "同意" : "拒绝") + "此换货申请吗？", function () {
                 $.post("HandleApply", {
                     sysNo: "@bam.sysNum",
@@ -228,25 +231,6 @@
             });
         }
     </script>
-
-    @if (bam.stepName.Contains("品质经理") && bam.isPass==null) {
-        <script src="@Url.Content("~/Scripts/webuploader.min.js")"></script>
-        <script src="@Url.Content("~/Scripts/myUploaderPro.js")"></script>
-        <script src="@Url.Content("~/Scripts/myUserSelecter.js")"></script>
-        <script>
-            $(function(){
-                $("#myUploader").myUploader({
-                    sysNum: "@h.sys_no",
-                    fileNumLimit: 10,
-                    accept: {
-                        title: '*',
-                        extensions: '*',
-                        mimeTypes: '*'
-                    }
-                });
-            });
-        </script>
-    }
 
     @if (bam.stepName.Contains("物流") && bam.isPass == null) {
         <script>
@@ -396,7 +380,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-sm-6 col-xs-12">
+            @*<div class="col-md-4 col-sm-6 col-xs-12">
                 <div class="b-div">
                     <span class="b-label">
                         市场部:
@@ -405,7 +389,7 @@
                         @h.agency_name
                     </div>
                 </div>
-            </div>
+            </div>*@
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <div class="b-div">
                     <span class="b-label">
@@ -466,6 +450,16 @@
                     </span>
                 </div>
             </div>
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <div class="b-div">
+                    <span class="b-label">
+                        营业员:
+                    </span>
+                    <span class="b-input">
+                        @string.Format("{0}({1})", h.notify_clerk_name, h.notify_clerk_no)
+                    </span>
+                </div>
+            </div>
         </div>
         <div class="b-div">
             <span class="b-label">
@@ -483,20 +477,10 @@
                 @h.return_reason
             </span>
         </div>
-        @if (bam.stepName.Contains("品质经理") && bam.isPass==null) {
-            <div style="margin-top:8px;">
-                <div style="display:inline-block;">
-                    <div id="picker"> <i class="fa fa-upload"></i> 上传复检报告 </div>
-                </div>
-            </div>
-            <div id="myUploader">
-                @*这里生成上传文件插件*@
-            </div>
-        }
-        else if (h.has_attachment) {
+        @if (h.has_attachment) {
             <div>
                 <div style="margin-bottom:6px;" class="b-label">复检报告：</div>
-                <ul class="list-group" id="attList"></ul>
+                <div id="attList"></div>
             </div>
         }
         <div class="b-div" style="margin-top:16px;">
@@ -505,10 +489,7 @@
             </span>
             <div class="b-input">
                 @if (bam.isPass == null) {
-                    if (bam.stepName.Contains("品质经理")) {
-                        <button class="btn btn-primary btn-sm editBt" type="button" data-role="品质经理"> <i class="fa fa-edit"></i> 录入实退数量/是否已上线 </button>
-                    }
-                    else if (bam.stepName.Contains("生产主管")) {
+                    if (bam.stepName.Contains("生产主管")) {
                         <button class="btn btn-primary btn-sm editBt" type="button" data-role="生产主管"> <i class="fa fa-edit"></i> 录入补货数量 </button>
                     }
                     else if (bam.stepName.Contains("物流")) {
@@ -556,6 +537,30 @@
         </div>
     </div>
 </div>
+<div class="panel panel-default" style="margin:16px 0;">
+    <div class="panel-body">
+        <h4 class="text-danger"><i class="fa fa-info-circle"></i> 操作说明 </h4>
+        <div style="margin-left:18px;padding-top:6px;" class="text-danger">
+            <p>
+                当前申请人负责的客户：@h.charge_customers
+            </p>
+            <p>
+                1. 流程步骤：流程开始--->客服提交换货申请---[抄送给营业员]--->品质经理审批--->计划经理审批--->生产主管审批--->部门总经理审批--->物流处理--->市场管理部结案--->流程结束。
+            </p>
+            <p>
+                2. 此流程只适合纯换货，不走K3红字单的场景。
+            </p>
+            <p>
+                3. 各级审核人需填写并处理的事项：
+                <div style="margin-left:24px">
+                    <div> [1]. 生产主管：填写每行实补数量</div>
+                    <div> [2]. 物流部：填写每行实发数量和发货人；并维护每笔收到的退货详情，包括规格型号、退货数量、到货时间、接收人等</div>
+                    <div> [3]. 市场管理部：核对订单数据、退货数据和补货数据，确认无误后结案</div>
+                </div>
+            </p>
+        </div>
+    </div>
+</div>
 
 @section Modal {
     @Html.Partial("_ConfirmDialog")
@@ -570,14 +575,14 @@
                 <div class="modal-body">
                     <form id="itemFm">
                         <input type="hidden" name="id" />
-                        <div class="b-div">
+                        @*<div class="b-div">
                             <span class="b-label">
                                 订单号:
                             </span>
                             <span class="b-input">
                                 <input type="text" class="form-control" name="order_no" readonly />
                             </span>
-                        </div>
+                        </div>*@
                         <div class="b-div">
                             <span class="b-label">
                                 规格型号:
@@ -588,41 +593,35 @@
                         </div>
                         <div class="b-div">
                             <span class="b-label">
+                                子型号:
+                            </span>
+                            <span class="b-input">
+                                <input type="text" class="form-control" name="c_moduel" readonly />
+                            </span>
+                        </div>
+                        <div class="b-div">
+                            <span class="b-label">
                                 退货数量:
                             </span>
                             <span class="b-input">
                                 <input type="text" class="form-control" name="return_qty" readonly />
                             </span>
                         </div>
-                        @if (bam.stepName.Contains("品质经理")) {
+                        <div class="b-div">
+                            <span class="b-label">
+                                补货数量:
+                            </span>
+                            <span class="b-input">
+                                <input type="text" class="form-control" name="fill_qty" readonly />
+                            </span>
+                        </div>
+                        @if (bam.stepName.Contains("生产主管")) {
                             <div class="b-div">
                                 <span class="b-label">
-                                    实退数量:
+                                    实补数量:
                                 </span>
                                 <span class="b-input">
-                                    <input type="number" class="form-control" name="real_return_qty" required/>
-                                </span>
-                            </div>
-                            <div class="b-div">
-                                <span class="b-label">
-                                    是否已上线:
-                                </span>
-                                <span class="b-input">
-                                    <select class="form-control" name="is_on_line" required>
-                                        <option value="">---- 选择是否已上线 ----</option>
-                                        <option value="已上线">已上线</option>
-                                        <option value="未上线">未上线</option>
-                                    </select>
-                                </span>
-                            </div>
-                        }
-                        else if (bam.stepName.Contains("生产主管")) {
-                            <div class="b-div">
-                                <span class="b-label">
-                                    补货数量:
-                                </span>
-                                <span class="b-input">
-                                    <input type="number" class="form-control" name="fill_qty" required/>
+                                    <input type="number" class="form-control" name="real_fill_qty" required/>
                                 </span>
                             </div>
                         }
@@ -671,7 +670,7 @@
                             <span class="b-input">
                                 <select class="form-control" name="moduel" required>
                                     <option value="">---- 选择规格型号 ----</option>
-                                    @foreach (var moduel in es.Select(i=>i.moduel).Distinct().ToList()) {
+                                    @foreach (var moduel in moduels) {
                                         <option value="@moduel">@moduel</option>
                                     }
                                 </select>
