--- a/EmpInfo/Views/Home/WorkGroupIndex.cshtml
+++ b/EmpInfo/Views/Home/WorkGroupIndex.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    string auts = (string)ViewData["autStr"];
+    bool testVisible = (bool)ViewData["testVisible"];
 }
 @section CSS{
     <style type="text/css">
@@ -75,6 +75,14 @@
                     <p class="text-center" data-key="休假,年假">请假申请</p>
                 </a>
             </div>
+            @if (testVisible) {
+                <div class="col-xs-4 col-sm-3 col-md-2">
+                    <a href="@Url.Content("~/Apply/ApplyIndex?billType=MQ")">
+                        <img src="@Url.Content("~/Content/images/mq.png")" alt="计件员工辞职(测试)" class="center-block" />
+                        <p class="text-center">计件员工辞职(测试)</p>
+                    </a>
+                </div>
+            }
             <div class="col-xs-4 col-sm-3 col-md-2">
                 <a href="@Url.Content("~/Apply/ApplyIndex?billType=JQ")">
                     <img src="@Url.Content("~/Content/images/quit.png")" alt="员工辞职/自离申请" class="center-block" />
