--- a/EmpInfo/Views/Report/HHReport.cshtml
+++ b/EmpInfo/Views/Report/HHReport.cshtml
@@ -55,8 +55,7 @@
             }
             toastr.info("数据正在导出，请稍等...");
             window.open("../Report/ExportHHExcel?obj=" + utils.StringifyAndParseCharacter(obj));
-
-            });
+        });
 
         $("#checkBt").on("click", function () {
             var obj = utils.getFormObj($("#fm"));
@@ -106,10 +105,12 @@
                 }, {
                     field: "return_dep",
                     title: "事业部"
-                }, {
-                    field: "order_no",
-                    title: "订单号"
-                }, {
+                },
+                //{
+                //    field: "order_no",
+                //    title: "订单号"
+                //},
+                {
                     field: "moduel",
                     title: "规格型号"
                 }, {
@@ -200,10 +201,6 @@
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="lbText">事业部：</div>
                     <input type="text" class="form-control" name="returnDep" style="margin:6px 0;" />
-                </div>
-                <div class="col-xs-12 col-sm-6 col-md-4">                
-                    <div class="lbText">订单号：</div>
-                    <input type="text" class="form-control" name="orderNo" style="margin:6px 0;" />                
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="lbText">型号：</div>
